added SEND TO SQL

--- a/SenderoToDBSqlServer/SenderToDBSqlServer.csproj
+++ b/SenderoToDBSqlServer/SenderToDBSqlServer.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.5</TargetFramework>
+    <TargetFramework>netcoreapp1.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CommonDB\CommonDB.csproj" />
+    <ProjectReference Include="..\SenderToDB\SenderToDB.csproj" />
   </ItemGroup>
 
 </Project>
