--- a/StankinsTests/StankinsTests.csproj
+++ b/StankinsTests/StankinsTests.csproj
@@ -10,6 +10,8 @@
     <None Remove="a.zip" />
     <None Remove="bookmarks_7_25_17.html" />
     <None Remove="InterpreterJobDateTime.txt" />
+    <None Remove="SqlToExecute\001Sql.txt" />
+    <None Remove="SqlToExecute\002Sql.txt" />
     <None Remove="Views\genericRow.cshtml" />
   </ItemGroup>
 
@@ -25,6 +27,12 @@
   <ItemGroup>
     <Content Include="bookmarks_7_25_17.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlToExecute\001Sql.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlToExecute\002Sql.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Views\genericRow.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -71,6 +79,7 @@
     <ProjectReference Include="..\SenderFilter\SenderFilter.csproj" />
     <ProjectReference Include="..\SenderHTML\SenderHTML.csproj" />
     <ProjectReference Include="..\SenderHttp\SenderHttp.csproj" />
+    <ProjectReference Include="..\SenderoToDBSqlServer\SenderToDBSqlServer.csproj" />
     <ProjectReference Include="..\SenderSMTP\SenderSMTP.csproj" />
     <ProjectReference Include="..\SenderToFile\SenderToFile.csproj" />
     <ProjectReference Include="..\SenderUnzipFiles\SenderUnzipFiles.csproj" />
