--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,6 @@ __pycache__/
 /StankinsTests/TestReceiverAzureIoTHub.cs
 /ReceiverAzureIoTHub/LastReceivedMessage.cs
 /StankinsDemos/Demo1JobFolders.txt
+/StankinsDemos/Demo1JobFolders
+/StankinsDemos/Demo2SimpleJobView
+/StankinsDemos/StankinsDemo
