added job for sql

--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,4 @@ __pycache__/
 /StankinsDemos/Demo1JobFolders
 /StankinsDemos/Demo2SimpleJobView
 /StankinsDemos/StankinsDemo
+/StankinsDemos/Demo3ExecuteSql
