added demo sql server

--- a/.gitignore
+++ b/.gitignore
@@ -271,3 +271,4 @@ __pycache__/
 /StankinsDemos/Demo2SimpleJobView
 /StankinsDemos/StankinsDemo
 /StankinsDemos/Demo3ExecuteSql
+/StankinsDemos/Demo4DocumentSqlServer
