--- a/ReceiverFileSystem/ReceiverFileSystem.csproj
+++ b/ReceiverFileSystem/ReceiverFileSystem.csproj
@@ -8,6 +8,7 @@
     <ProjectReference Include="..\Logging\Logging.csproj" />
     <ProjectReference Include="..\StankinsInterfaces\StankinsInterfaces.csproj" />
     <ProjectReference Include="..\StanskinsImplementation\StanskinsImplementation.csproj" />
+    <ProjectReference Include="..\Transformers\Transformers.csproj" />
   </ItemGroup>
 
 </Project>
