--- a/StankinsTests/StankinsTests.csproj
+++ b/StankinsTests/StankinsTests.csproj
@@ -10,6 +10,8 @@
     <None Remove="a.zip" />
     <None Remove="bookmarks_7_25_17.html" />
     <None Remove="InterpreterJobDateTime.txt" />
+    <None Remove="PBX\Pbx2_rdc-16.log" />
+    <None Remove="PBX\Pbx4_oh-93.log" />
     <None Remove="Views\columns.cshtml" />
     <None Remove="Views\databases.cshtml" />
     <None Remove="Views\genericRow.cshtml" />
@@ -29,6 +31,12 @@
   <ItemGroup>
     <Content Include="bookmarks_7_25_17.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="PBX\Pbx2_rdc-16.log">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="PBX\Pbx4_oh-93.log">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="SqlToExecute\001Sql.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
