--- a/StankinsTests/StankinsTests.csproj
+++ b/StankinsTests/StankinsTests.csproj
@@ -12,6 +12,7 @@
     <None Remove="InterpreterJobDateTime.txt" />
     <None Remove="PBX\Pbx2_rdc-16.log" />
     <None Remove="PBX\Pbx4_oh-93.log" />
+    <None Remove="PBX\PBXRemove.log" />
     <None Remove="Views\columns.cshtml" />
     <None Remove="Views\databases.cshtml" />
     <None Remove="Views\genericRow.cshtml" />
@@ -36,6 +37,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="PBX\Pbx4_oh-93.log">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="PBX\PBXRemove.log">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="SqlToExecute\001Sql.sql">
