each demo has job defintion

--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,4 @@ __pycache__/
 /StankinsDemos/StankinsDemo
 /StankinsDemos/Demo3ExecuteSql
 /StankinsDemos/Demo4DocumentSqlServer
+/StankinsDemos/jobDefinition.html
