--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,9 @@ __pycache__/
 /StankinsDemos/Demo3ExecuteSql
 /StankinsDemos/Demo4DocumentSqlServer
 /StankinsDemos/jobDefinition.html
+/StankinsDemos/relationalSqlServer.html
+/StankinsDemos/jobDefinition.txt
+/StankinsDemos/Demo4DocumentSqlServer.txt
+/StankinsDemos/Demo3ExecuteSql.txt
+/StankinsDemos/Demo2SimpleJobView.html
+/StankinsDemos/Demo2JobView.txt
