--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,4 @@ __pycache__/
 /StankinsDemos/Demo3ExecuteSql.txt
 /StankinsDemos/Demo2SimpleJobView.html
 /StankinsDemos/Demo2JobView.txt
+/StankinsDemos/log-20170925.txt
