now with demos running

--- a/.gitignore
+++ b/.gitignore
@@ -280,3 +280,4 @@ __pycache__/
 /StankinsDemos/Demo2SimpleJobView.html
 /StankinsDemos/Demo2JobView.txt
 /StankinsDemos/log-20170925.txt
+/StankinsDemos/Demo5PBX
