added analysis and serilog assembly redirect

--- a/.gitignore
+++ b/.gitignore
@@ -281,3 +281,4 @@ __pycache__/
 /StankinsDemos/Demo2JobView.txt
 /StankinsDemos/log-20170925.txt
 /StankinsDemos/Demo5PBX
+/StankinsSimpleJobNET/Stankins.json
