--- a/StankinsSimpleJobNET/App.config
+++ b/StankinsSimpleJobNET/App.config
@@ -17,6 +17,10 @@
         <assemblyIdentity name="Serilog" publicKeyToken="24c2f752a8e58a10" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.5.0" newVersion="2.5.0" />
       </dependentAssembly>     
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
