--- a/StankinsSimpleJobNET/packages.config
+++ b/StankinsSimpleJobNET/packages.config
@@ -6,11 +6,17 @@
   <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyModel" version="1.1.2" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging" version="1.1.2" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.2" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net462" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="Serilog" version="2.5.0" targetFramework="net461" />
+  <package id="Serilog.Enrichers.Thread" version="2.0.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.Async" version="1.0.1" targetFramework="net461" />
+  <package id="Serilog.Sinks.Console" version="3.0.1" targetFramework="net461" />
+  <package id="Serilog.Sinks.Literate" version="3.0.0" targetFramework="net461" />
   <package id="SQLite" version="3.13.0" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
