--- a/SenderUnzipFiles/SenderUnzipFiles.csproj
+++ b/SenderUnzipFiles/SenderUnzipFiles.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.0</TargetFramework>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
