transformer add receiver

--- a/.gitignore
+++ b/.gitignore
@@ -282,3 +282,5 @@ __pycache__/
 /StankinsDemos/log-20170925.txt
 /StankinsDemos/Demo5PBX
 /StankinsSimpleJobNET/Stankins.json
+/StankinsDemos/Demo7LoadDllTypes
+/StankinsDemos/Demo7PBX
