add blockly start

--- a/.gitignore
+++ b/.gitignore
@@ -284,3 +284,5 @@ __pycache__/
 /StankinsSimpleJobNET/Stankins.json
 /StankinsDemos/Demo7LoadDllTypes
 /StankinsDemos/Demo7PBX
+/StankinsDemos/Demo8Blockly
+/StankinsDemos/bockly.txt
