--- a/StankinsTests/StankinsTests.csproj
+++ b/StankinsTests/StankinsTests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Remove="a.zip" />
+    <None Remove="blockly.html" />
     <None Remove="bookmarks_7_25_17.html" />
     <None Remove="InterpreterJobDateTime.txt" />
     <None Remove="PBX\Pbx2_rdc-16.log" />
@@ -21,6 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="blockly.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Views\relationalGeneric.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -100,6 +104,7 @@
     <ProjectReference Include="..\ReceiverDBSQLite\ReceiverDBSQLite.csproj" />
     <ProjectReference Include="..\ReceiverDll\ReceiverDll.csproj" />
     <ProjectReference Include="..\ReceiverFileSystem\ReceiverFileSystem.csproj" />
+    <ProjectReference Include="..\ReceiverHTML\ReceiverHTML.csproj" />
     <ProjectReference Include="..\ReceiverJob\ReceiverJob.csproj" />
     <ProjectReference Include="..\ReceiverJSON\ReceiverJSON.csproj" />
     <ProjectReference Include="..\ReiceverDBStmtSqlServer\ReiceverDBStmtSqlServer.csproj" />
