--- a/.gitignore
+++ b/.gitignore
@@ -287,3 +287,7 @@ __pycache__/
 /StankinsDemos/Demo8Blockly
 /StankinsDemos/bockly.txt
 /StankinsDemos/blockly.html
+StankinsTests/appsettings.json
+StankinsTests/appsettings.json
+StankinsTests/appsettings.json
+StankinsTests/appsettings.json
