--- a/ReceiverDatabaseObjectsMySql/ReceiverDatabaseObjectsMySql.csproj
+++ b/ReceiverDatabaseObjectsMySql/ReceiverDatabaseObjectsMySql.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Logging\Logging.csproj" />
     <ProjectReference Include="..\ReceiverDatabaseObjects\ReceiverDatabaseObjects.csproj" />
   </ItemGroup>
 
